feat: create folder (#3)
* Add store folder request

* Add store folder request

* Add folder repository and service

* Add folder controller and test

* Add more tests for folder creation
